# CrystalLabb

./: app.py  pyproject.toml  routes.py  signup.html
templates/: login.html  signup.html  view_report.html
