[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=58.0.0",  # Add this line
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "ydata-profiling>=4.17.0",
    "flask-login>=0.6.3",
    "xlrd>=2.0.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "email-validator>=2.3.0",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
]
