[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
  "setuptools>=70",                 # ok to keep at runtime too
  "flask>=3.1.2",
  "flask-sqlalchemy>=3.1.1",
  "openpyxl>=3.1.5",
  "pandas==2.2.2",                  # works well with ydata-profiling 4.1x
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.1.1",
  "ydata-profiling>=4.17.0",        # keep only this (new name)
  "flask-login>=0.6.3",
  "xlrd>=2.0.2",
  "SQLAlchemy>=2.0.43",
  "Werkzeug>=3.1.3",
  "gunicorn>=23.0.0",
  "email-validator>=2.3.0",
  "flask-wtf>=1.2.2",
  "wtforms>=3.2.1",
]
