[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystallabb"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "setuptools>=70",
  "flask>=3.1.2",
  "flask-sqlalchemy>=3.1.1",
  "SQLAlchemy>=2.0.43",
  "Werkzeug>=3.1.3",
  "flask-login>=0.6.3",
  "flask-wtf>=1.2.2",
  "wtforms>=3.2.1",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.2",
  "psycopg2-binary>=2.9.10",
  "gunicorn>=23.0.0",
  "python-dotenv>=1.1.1",
  "email-validator>=2.3.0",
  "pandas==2.2.2",
  "ydata-profiling>=4.17.0"
]

[tool.setuptools]
py-modules = ["app", "auth", "forms", "main", "models", "routes"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["static", "templates"]
